# backend-server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  main.cpp  server
examples/: client.c  client.py  lab9server.py  server.c  server.py
src/: data_structures.cpp  data_structures.h  database.cpp  database.h  gui.cpp  gui.h  idw_heatmap.cpp  idw_heatmap.h  main.cpp  mercator.cpp  mercator.h  server.cpp  server.h  tile_cache.cpp  tile_cache.h  tiles.cpp
